--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <li><a href="#certifications">Certifications</a></li>
     <li><a href="#" onclick="toggleTheme()">🌙</a></li>
   </ul>
-</nav>
+</nav> 
 
 <!-- HERO -->
 <section id="home" class="hero">
@@ -50,7 +50,7 @@
 <section id="about" class="glass">
   <h2>About Me</h2>
   <p>
-    I’m a passionate developer focused on building visually stunning,
+    I’m a passionate WEB  developer focused on building visually stunning,
     secure, and high-performance web applications with modern UI.
   </p>
 </section>
