--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section id="about" class="glass">
   <h2>About Me</h2>
   <p>
-    I’m a passionate WEB  developer focused on building visually stunning,
+    I’m a passionate  developer focused on building visually stunning,
     secure, and high-performance web applications with modern UI.
   </p>
 </section>
