--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <section id="about" class="glass">
   <h2>About Me</h2>
   <p>
+    Rahul darling
     I’m a passionate developer focused on building visually stunning,
     secure, and high-performance web applications with modern UI.
   </p>
